--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8285907693212330"
+    crossorigin="anonymous"></script>
     <!-- Header con el menú de navegación -->
     <header>
         <h1>InfoTecnoBlog</h1>
